; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_light.c_gl_compute_material_shine_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_light.c_gl_compute_material_shine_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_material = type { float* }

@SHINE_TABLE_SIZE = common dso_local global i32 0, align 4
@exponent = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_compute_material_shine_table(%struct.gl_material* %0) #0 {
  %2 = alloca %struct.gl_material*, align 8
  %3 = alloca i32, align 4
  store %struct.gl_material* %0, %struct.gl_material** %2, align 8
  %4 = load %struct.gl_material*, %struct.gl_material** %2, align 8
  %5 = getelementptr inbounds %struct.gl_material, %struct.gl_material* %4, i32 0, i32 0
  %6 = load float*, float** %5, align 8
  %7 = getelementptr inbounds float, float* %6, i64 0
  store float 0.000000e+00, float* %7, align 4
  store i32 1, i32* %3, align 4
  br label %8

8:                                                ; preds = %19, %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @SHINE_TABLE_SIZE, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %22

12:                                               ; preds = %8
  %13 = load %struct.gl_material*, %struct.gl_material** %2, align 8
  %14 = getelementptr inbounds %struct.gl_material, %struct.gl_material* %13, i32 0, i32 0
  %15 = load float*, float** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds float, float* %15, i64 %17
  store float -1.000000e+00, float* %18, align 4
  br label %19

19:                                               ; preds = %12
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %8

22:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
